design fix on small video streams

--- a/public/assets/css/room.styling.css
+++ b/public/assets/css/room.styling.css
@@ -19,13 +19,11 @@
 }
 
 #videos-panel {
-	position: relative;
-  margin: 0 auto;
+  margin: 0;
 	height: 100%;
 	width: 100%;
 	background-color: #f8f8f8;
   padding: 0px;
-	border: 1px solid black;
 
 }
 
@@ -33,7 +31,6 @@
 
 	width: 100%;
 	height: 75%;
-	border: 1px solid blue;
 	text-align: center;
 }
 
@@ -44,7 +41,7 @@ canvas {
 	transform: scale(-1, 1);
 	filter: FlipH;
 	height: 100%;
-	width: 100%;
+	width: 80%;
 	margin: 0 auto;
 }
 
@@ -52,9 +49,10 @@ canvas {
 	text-align: center;
 	width: 100%;
 	height: 25%;
-	border:1px solid red;
+	border-top:1px solid gray ;
 	padding: 0;
 }
+
 
 #remotes {
 	margin: 0;
@@ -64,37 +62,42 @@ canvas {
 
 #remotes video {
 	height: 100%;
-	width: 200px;
+	width: 250px;
+
 }
 
 #local-video {
 	display: inline-block;
 	height: 100%;
-  width: 200px;
+  width: 250px;
 	margin: 0;
 }
 
 /*simpleWebRTC div video container */
 .videoContainer {
 	display: inline-block;
+	height: 100%;
 }
 
 #local-video video {
 
-	width: 200px;
+	width: 250px;
+	object-fit: contain;
+	height: 100%;
 }
-
+/*
 .chatPanel {
-  box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.5);
 	float: right;
 	height: 100%;
+	width: 20%;
 	border: 1px solid black;
+
 
 }
 
 .top_menu {
 
- 	height:8%;
+ 	height:10%;
  	box-shadow: 30px 1px 30px rgba(0, 0, 0, 0.5);
 	border: 1px solid black;
 }
@@ -109,7 +112,7 @@ canvas {
 
 #chatMessagesWindow {
 	border: 1px solid black;
-	height: 82%;
+	height: 80%;
   border: 1px;
 }
 
@@ -179,4 +182,4 @@ word-wrap: break-word;
 #messages li.others{
   text-align: left;
   background-color: #ff4d88;
-}
+}*/
